--- a/webview2_svelte_template/package.json
+++ b/webview2_svelte_template/package.json
@@ -10,11 +10,15 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "@rollup/plugin-typescript": "^8.2.1",
     "concurrently": "^6.2.0",
     "rollup": "^2.52.1",
-    "svelte": "^3.38.2"
+    "rollup-plugin-css-only": "^3.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "svelte": "^3.38.2",
+    "svelte-preprocess": "^4.7.3",
+    "typescript": "^4.3.4"
   },
   "dependencies": {
     "rollup-plugin-svelte": "^7.1.0"
